Update docs to include @security
