# gator-leasing-server/main.go
@@ -11,7 +11,7 @@ import (
 
 //	@host	localhost:8080
 
-// @securitydefinitions.oauth2.application	OAuth2Application
+// @securitydefinitions.oauth2.application	Auth0
 // @tokenUrl								https://dev-nkzmwy1mucvvl5xb.us.auth0.com/oauth/token
 // @description							Auth0 protects our endpoints
 func main() {
